Modifying file .gitignore to ignore the file .vscode

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 # Ignore all the files and folders which name is compile, because it is the result of the makefile
 **/compiled
+
+# Ignore my configuration of visual studio code
+**/.vscode
