Fixing the method to find out if the number is palindrome or not

--- a/leetcode/easy/Palindrome_number/C/revert_half_number/Makefile
+++ b/leetcode/easy/Palindrome_number/C/revert_half_number/Makefile
@@ -4,7 +4,7 @@ FILE=compile.exe
 CFLAGS=-Wall -o $(FILE)
 
 all:
-	$(CC) $(TARGET) $(CFLAGS) && ./$(FILE)
+	$(CC) $(TARGET) $(CFLAGS) 
 
 rm:
 	rm $(FILE)
