Adding some ignoring files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 
 # Ignoring compiled on windows
 **/compile.exe
+
+# Ignoring this type of files because somethimes I forget that I have to write compiled instead of compile
+**/compile
+
+# Ignoring files buffered
+**/*.swp
